fixed err500 on pnjview & bad display on small img

--- a/static/vsite/style.css
+++ b/static/vsite/style.css
@@ -124,6 +124,9 @@ input{
   border-width: 2px;
   border-style: solid;
   border-color: black;
+  width: 300px;
+  height: auto;
+
 }
 
 .medium_img{
